--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,18 +6,23 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a>Snowtricks</a></li>
-                <li><a>se connecter</a></li>
-                <li><a>s'inscire</a></li>
-                <li><a>se déconnecter</a></li>
-            </ul>
-        </nav>
-    </header>
-    
+        <header>
+            <nav>
+                <ul>
+                    <li><a>Snowtricks</a></li>
+                    <li><a>se connecter</a></li>
+                    <li><a>s'inscire</a></li>
+                    <li><a>se déconnecter</a></li>
+                </ul>
+            </nav>
+        </header>
+        
         {% block body %}{% endblock %}
+            
+        <footer>
+            <p>©2020 - tous droits réservés<p>
+        </footer>
+
         {% block javascripts %}{% endblock %}
     </body>
 </html>15
