show comment by figure and can post a comment by jimmy user, user connnected don't again work

--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -6,7 +6,7 @@
 
 <section>
     <div>
-        <img src="../images/figures/illustrations/{{figureIllustration.path}}" alt='image' />
+        <img src="../images/figures/illustrations/{{figure.illustrations|first.path}}" alt='image' />
         <div>
             <i class="fas fa-pencil-alt"></i>
             <i class="fas fa-trash-alt"></i>
@@ -16,12 +16,12 @@
 
 <section id="figures">
     <div id="illustrations">
-        {% for illustration in illustrations %}
+        {% for illustration in figure.illustrations %}
             <img src="../images/figures/illustrations/{{ illustration.path }}"/>
         {% endfor %}
     </div>
     <div id="videos">
-        {% for video in videos %}
+        {% for video in figure.videos %}
             <img src="../images/figures/videos{{ video.path }}"/>
         {% endfor %}
     </div>
@@ -31,6 +31,16 @@
     <p>La figure <strong>{{figure.name}}</strong> appartient au groupe <em>{{figure.figureGroupe}}<em></p>
     <p>{{figure.description}}</p>
     <p>{{figure.user.name}} a crée le topic le <em>{{figure.date|date("d/m/Y à H:i")}}</em></p>
+</section>
+
+<section id="PosterUnCommentaire">
+{{ form(comment_form)}}
+</section>
+
+<section>
+{% for comment in comments %}
+            <p><img style="height:50px; border-radius:50px;" src="../images/pictures/{{comment.user.picture}}"/>{{comment.user.name}} :{{ comment.message }}</p>
+        {% endfor %}
 </section>
 
 
