Début de la mise en place, non terminée..

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="{{path('home')}}">Snowtricks</a></li>
+                    <li><a href="{{path('add_figure')}}">Créer une figure</a></li>
                     <li><a>se connecter</a></li>
                     <li><a>s'inscrire</a></li>
                     <li><a>se déconnecter</a></li>
