--- a/templates/figure/index.html.twig
+++ b/templates/figure/index.html.twig
@@ -6,7 +6,11 @@
 
 <section>
     <div>
-        <img src="../images/figures/illustrations/{{figure.illustrations|first.path}}" alt='image' />
+    {% if figure.illustrations is null %}
+        <!-- image par défaut--><p>test</p>
+    {% else %}
+     <img src="../images/figures/illustrations/{{figure.illustrations|first.path}}" alt='{{figure.illustrations|first.path}}' />
+    {% endif %}
         <div>
             <i class="fas fa-pencil-alt"></i>
             <i class="fas fa-trash-alt"></i>
@@ -16,9 +20,9 @@
 
 <section id="figures">
     <div id="illustrations">
-        {% for illustration in figure.illustrations %}
-            <img src="../images/figures/illustrations/{{ illustration.path }}"/>
-        {% endfor %}
+            {% for illustration in figure.illustrations %}
+                <img src="../images/figures/illustrations/{{ illustration.path }} alt='{{ illustration.path }}'"/>
+            {% endfor %}
     </div>
     <div id="videos">
         {% for video in figure.videos %}
