--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Snowtricks{% endblock %}</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
        {% block stylesheets %}{% endblock %}
     </head>
@@ -25,7 +26,7 @@
         <footer>
             <p>©2020 - tous droits réservés<p>
         </footer>
-
+        
         {% block javascripts %}{% endblock %}
 
     </body>
