--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -26,7 +26,7 @@
                 <img src="" alt="{{ figure.name }}"/>
                 <div>
                     <span>{{ figure.name }}</span>
-                    <i class="fas fa-pencil-alt"></i>
+                    <a href="{{ path('update_figure',{'id':figure.id}) }}"><i class="fas fa-pencil-alt"></i></a>
                     <i class="fas fa-trash-alt"></i>
                 </div>
             </article>
