--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Snowtricks{% endblock %}</title>
-        <script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
-       {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Snowtricks
+			{% endblock %}
+		</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
+		{% block stylesheets %}{% endblock %}
+	</head>
+	<body>
 
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="{{path('home')}}">Snowtricks</a></li>
-                    <li><a>se connecter</a></li>
-                    <li><a>s'inscrire</a></li>
-                    <li><a>se déconnecter</a></li>
-                </ul>
-            </nav>
-        </header>
-        
-        {% block body %}{% endblock %}
+		<header>
+			<nav>
+				<ul>
+					<li><ahref="{{path('home')}}">Snowtricks</a></li>
+					<li><ahref="{{path('add_figure')}}">Créer une figure</a></li>
+					<li><a>se connecter</a></li>
+					<li><a>s'inscrire</a></li>
+					<li><a>se déconnecter</a></li>
+				</ul>
+			</nav>
+		</header>
 
-        <footer>
-            <p>©2020 - tous droits réservés<p>
-        </footer>
+		{% block body %}{% endblock %}
 
-        {% block javascripts %}{% endblock %}
+		<footer>
+			<p>©2020 - tous droits réservés</p>
+			<p></p>
+		</footer>
 
-    </body>
+		{% block javascripts %}{% endblock %}
+
+	</body>
 </html>
