update figure is done, need to fix code and resolve some bug like add and delete illustration

--- a/templates/add_figure/index.html.twig
+++ b/templates/add_figure/index.html.twig
@@ -16,7 +16,7 @@
 	<div id="containerIllustrations">
 		<ul class="illustrations" data-prototype="{{ form_widget(figure_form.illustrations.vars.prototype)|e('html_attr') }}">
 			{% for illustration in figure_form.illustrations %}
-				<li>{{ form_row(illustration.path) }}</li>
+				<li>{{ form_row(illustration.file) }}</li>
 			{% endfor %}
 		</ul>
 		<button type="button" class="add_item_link_illustration" data-collection-holder-class="illustrations">Ajouter une illustration</button>
