--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
 					<li><a href="{{path('home')}}">Snowtricks</a></li>
 					<li><a href="{{path('add_figure')}}">Créer une figure</a></li>
 					<li><a>se connecter</a></li>
-					<li><a>s'inscrire</a></li>
+					<li><a href="{{path('sign_up')}}">s'inscrire</a></li>
 					<li><a>se déconnecter</a></li>
 				</ul>
 			</nav>
