--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,7 +23,7 @@
 				<ul>
 					<li><a href="{{path('home')}}">Snowtricks</a></li>
 					<li><a href="{{path('add_figure')}}">Créer une figure</a></li>
-					<li><a>se connecter</a></li>
+					<li><a href="{{path('sign_in')}}">se connecter</a></li>
 					<li><a href="{{path('sign_up')}}">s'inscrire</a></li>
 					<li><a>se déconnecter</a></li>
 				</ul>
