--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,38 +6,61 @@
 			{% block title %}Snowtricks
 			{% endblock %}
 		</title>
+		<link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="https://kit.fontawesome.com/43219f80e6.js" crossorigin="anonymous"></script>
 		{% block stylesheets %}{% endblock %}
 		<style>
 			img {
-				height: 250px;
-				width: 250px;
+				height: 100px;
+				width: 100px;
+			}
+			body{
+				margin: 0;
+				min-height: 100vh;
+				display: grid;
+				grid-template-rows: auto 1fr auto;
+			}
+			
+			fieldset{
+				padding:10px;
 			}
 		</style>
 	</head>
 	<body>
 
 		<header>
-			<nav>
-				<ul>
-					<li><a href="{{path('home')}}">Snowtricks</a></li>
-					<li><a href="{{path('add_figure')}}">Créer une figure</a></li
-					{% if not app.user %}
-						<li><a href="{{path('sign_in')}}">se connecter</a></li>
-						<li><a href="{{path('sign_up')}}">s'inscrire</a></li>
-					{% else %}
-						<li><a href="{{path('log_out')}}">se déconnecter</a></li>
-					{% endif %}
-				</ul>
+			<nav class="navbar navbar-expand navbar-dark bg-dark">
+				<a class="navbar-brand" href="{{ path('home') }}">Snowtricks</a>
+				<div class="collapse navbar-collapse" id="navbarColor02">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="{{ path('add_figure') }}">Créer une figure</a>
+							<span class="sr-only">(current)</span>
+						</li>
+					</ul>
+					<div class="my-2 my-lg-0">
+						{% if not app.user %}
+								<a href="{{ path('sign_in') }}"><button type="button" class="btn btn-outline-secondary">se connecter</button></a>
+								<a href="{{ path('sign_up') }}"><button type="button" class="btn btn-secondary">s'inscrire</button></a>
+						
+						{% else %}
+								<button type="button" class="btn btn-secondary" href="{{path('log_out')}}">se déconnecter</button>
+						{% endif %}
+					</div>
+				</div>
 			</nav>
+			
 		</header>
 
-		{% block body %}{% endblock %}
+		<section>
+			{% block body %}{% endblock %}
+		</section>
 
-		<footer>
-			<p>©2020 - tous droits réservés</p>
-			<p></p>
+		<footer class="text-white bg-dark page-footer">
+			<div class="footer-copyright text-center py-3">© 2020 Copyright:
+				<a href="{{ path('home') }}"> Snowtricks</a>
+			</div>
 		</footer>
 
 		{% block javascripts %}{% endblock %}
