--- a/templates/figure/update_figure.html.twig
+++ b/templates/figure/update_figure.html.twig
@@ -7,39 +7,38 @@
 {% block body %}
 
 	<section>
-		<h1>Modification de la figure
-			{{figure.name}}</h1>
+		{{ form_start(figure_form,{'attr':{'class':'class="col-sm-6 col-md-6  control-label center-block'}}) }}
 
-		{{ form_start(figure_form) }}
+			<legend>{{figure.name}}</legend>
 
-		{{form_row(figure_form.name)}}
-		{{form_row(figure_form.description)}}
-		{{form_row(figure_form.figureGroupe)}}
+			{{form_row(figure_form.name)}}
+			{{form_row(figure_form.description)}}
+			{{form_row(figure_form.figureGroupe)}}
 
-		<div id="containerIllustrations">
-			<ul class="illustrations" data-prototype="{{ form_widget(figure_form.illustrations.vars.prototype)|e('html_attr') }}">
-				{% for illustration in figure_form.illustrations %}
+			<div id="containerIllustrations">
+				<ul class="illustrations" data-prototype="{{ form_widget(figure_form.illustrations.vars.prototype)|e('html_attr') }}">
+					{% for illustration in figure_form.illustrations %}
 
-					<li>
-						<img src="../images/figures/illustrations/{{ illustration.vars.data.path }}"/>
-						{{ form_row(illustration.file) }}
+						<li>
+							<img src="../images/figures/illustrations/{{ illustration.vars.data.path }}"/>
+							{{ form_row(illustration.file) }}
 
-					</li>
-				</ul>
-			{% endfor %}
-			<button type="button" class="add_item_link_illustration" data-collection-holder-class="illustrations">Ajouter une illustration</button>
-		</div>
-
-		<div id="containerVideos">
-			<ul class="videos" data-prototype="{{ form_widget(figure_form.videos.vars.prototype)|e('html_attr') }}">
-				{% for video in figure_form.videos %}
-					<li>{{ form_row(video.path,{'attr':{'placeholder':"https://www.youtube.com/watch?v="}}) }}</li>
+						</li>
+					</ul>
 				{% endfor %}
-			</ul>
-			<button type="button" class="add_item_link_video" data-collection-holder-class="videos">Ajouter une vidéo</button>
-		</div>
+				<button type="button" class="add_item_link_illustration btn btn-outline-primary" data-collection-holder-class="illustrations">Ajouter une illustration</button>
+			</div>
 
-		<button type="submit">Enregistrer les modifications</button>
+			<div id="containerVideos">
+				<ul class="videos" data-prototype="{{ form_widget(figure_form.videos.vars.prototype)|e('html_attr') }}">
+					{% for video in figure_form.videos %}
+						<li>{{ form_row(video.path,{'attr':{'placeholder':"https://www.youtube.com/watch?v="}}) }}</li>
+					{% endfor %}
+				</ul>
+				<button type="button" class="add_item_link_video btn btn-outline-primary" data-collection-holder-class="videos">Ajouter une vidéo</button>
+			</div>
+
+			<button type="submit" class="btn btn-secondary">Enregistrer les modifications</button>
 
 		{{ form_end(figure_form) }}
 	</section>
@@ -50,5 +49,4 @@
 	<script type="text/javascript" src="../build/app.js/addIllustrations.js"></script>
 	<script type="text/javascript" src="../build/app.js/addVideos.js"></script>
 	<script type="text/javascript" src="../build/app.js/ManagementCollectionForm.js"></script>
-
 {% endblock %}
