--- a/templates/figure/update_figure.html.twig
+++ b/templates/figure/update_figure.html.twig
@@ -6,41 +6,42 @@
 
 {% block body %}
 
-	<section>
-		{{ form_start(figure_form,{'attr':{'class':'class="col-sm-6 col-md-6  control-label center-block'}}) }}
+	<section class="container-fluid ">
+	<div class="row">
+		{{ form_start(figure_form,{'attr':{'class':'col-offset-md-3 col-md-6  col-offset-md-3  control-label m-auto'}}) }}
 
-			<legend>{{figure.name}}</legend>
+			<legend class="h1 my-5">{{figure.name}}</legend>
 
 			{{form_row(figure_form.name)}}
 			{{form_row(figure_form.description)}}
 			{{form_row(figure_form.figureGroupe)}}
 
 			<div id="containerIllustrations">
-				<ul class="illustrations" data-prototype="{{ form_widget(figure_form.illustrations.vars.prototype)|e('html_attr') }}">
+				<ul class="illustrations d-flex justify-content-around flex-wrap text-center" data-prototype="{{ form_widget(figure_form.illustrations.vars.prototype)|e('html_attr') }}">
 					{% for illustration in figure_form.illustrations %}
+					<li class="col-md-6">
+						<img src="../images/figures/illustrations/{{ illustration.vars.data.path }}" class="m-1 rounded border"style="height:100px; width:150px;"/>
+						{{ form_row(illustration.file) }}
 
-						<li>
-							<img src="../images/figures/illustrations/{{ illustration.vars.data.path }}"/>
-							{{ form_row(illustration.file) }}
-
-						</li>
-					</ul>
-				{% endfor %}
-				<button type="button" class="add_item_link_illustration btn btn-outline-primary" data-collection-holder-class="illustrations">Ajouter une illustration</button>
+					</li>
+					{% endfor %}
+				</ul>
+				<button type="button" class="add_item_link_illustration btn btn-secondary my-2" data-collection-holder-class="illustrations">Ajouter une illustration</button>
 			</div>
 
 			<div id="containerVideos">
-				<ul class="videos" data-prototype="{{ form_widget(figure_form.videos.vars.prototype)|e('html_attr') }}">
+				<ul class="videos d-flex justify-content-around flex-wrap text-center" data-prototype="{{ form_widget(figure_form.videos.vars.prototype)|e('html_attr') }}">
 					{% for video in figure_form.videos %}
-						<li>{{ form_row(video.path,{'attr':{'placeholder':"https://www.youtube.com/watch?v="}}) }}</li>
+					<li class="col-md-6">{{ form_row(video.path,{'attr':{'placeholder':"https://www.youtube.com/watch?v="}}) }}</li>
 					{% endfor %}
 				</ul>
-				<button type="button" class="add_item_link_video btn btn-outline-primary" data-collection-holder-class="videos">Ajouter une vidéo</button>
+				<button type="button" class="add_item_link_video btn btn-secondary my-2" data-collection-holder-class="videos">Ajouter une vidéo</button>
 			</div>
 
-			<button type="submit" class="btn btn-secondary">Enregistrer les modifications</button>
+			<button type="submit" class="btn btn-dark my-3">Enregistrer les modifications</button>
 
 		{{ form_end(figure_form) }}
+		</div>
 	</section>
 
 {% endblock %}
