--- a/templates/security/sign_in.html.twig
+++ b/templates/security/sign_in.html.twig
@@ -6,8 +6,9 @@
 
 <div class="container h-50">
     <div class="row h-100 justify-content-center align-items-center">
-        <form action="{{ path('sign_in')}}" method="post" class="col-sm-8 col-md-6  control-label center-block mx-auto  justify-content-center align-items-center" >
-            <legend>Connexion</legend>
+        <form action="{{ path('sign_in')}}" method="post" class="col-sm-8 col-md-6  control-label center-block mx-auto  justify-content-center align-items-center  text-center" >
+
+            <legend class="h1 my-5">Connectez-vous</legend>
 
             <div class="form-group">
                 <input placeholder="Adresse email ..." required name="_username" type="text" class="form-control">
@@ -15,7 +16,7 @@
             <div class="form-group">
                 <input placeholder="Mot de passe ..." required name="_password" type="password" class="form-control">
             </div>
-            <button type="submit" class="btn btn-secondary">Connexion !</button>
+            <button type="submit" class="btn btn-dark btn-lg">Connexion  <i class="fas fa-sign-in-alt"></i></button>
         </form>
     </div>
 </div>
