manage confirme_password in formType as entity

--- a/templates/figure/add_figure.html.twig
+++ b/templates/figure/add_figure.html.twig
@@ -35,7 +35,7 @@
 			<button type="button" class="add_item_link_video btn btn-secondary my-2" data-collection-holder-class="videos">Ajouter une vidéo</button>
 		</fieldset>
 
-		<button type="submit" class="btn btn-dark my-3">Ajouter l'article</button>
+		<button type="submit" class="btn btn-dark btn-lg my-3">Ajouter l'article</button>
 
 	{{ form_end(figure_form) }}
 	</div>
